Integrate TODO into readme

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -33,10 +33,11 @@
     "But see all the caveats.\n",
     "I mean, they're pretty obvious.\n",
     "There is only so much you can do with nothing but text\n",
-    "that is always right-justified,\n",
+    "that is always left-justified,\n",
     "displayed in a very narrow column,\n",
     "and in a variable-width font--\n",
     "even with Unicode.\n",
+    "If you think you can pull off a scatter plot with variable width Unicode in the space of a tweet, by all means, send me a PR.\n",
     "\n",
     "I wrote this for the fun of it,\n",
     "on a lark. Don't get all testy with me.\n",
@@ -45,8 +46,7 @@
     "\n",
     "For most of the types of plot, you will specify your data set,\n",
     "(typically a list, list of tuples, dict, etc.).\n",
-    "Generating this from a datafrane or other form is your problem--\n",
-    "Piltdown just generates strings. That's all.\n",
+    "Generating this from a datafrane or other form is your problem--Piltdown just generates strings. That's all.\n",
     "There are a million utilities that could be included\n",
     "to post your string to Twitter for you,\n",
     "or to do other Unicode tricks,\n",
@@ -80,7 +80,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Documentation by Example, or The Plots"
+    "## Documentation by Example, or Ye Olde Plots\n",
+    "\n",
+    "In alphabetical order:\n",
+    "\n",
+    " - Horizontal Dot Chart"
    ]
   },
   {
@@ -101,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -137,11 +141,12 @@
    "source": [
     "## Hacking\n",
     "\n",
-    "Project goals:\n",
+    "#### Project goals\n",
     "\n",
     "- Simple\n",
     "- Really simple\n",
-    "- Simple enough to just write static documentation here.\n",
+    "- Simple enough to just write static documentation here\n",
+    "- Simple enough that the examples in the documentation here can be the test suite\n",
     "- Don't try to do anything but create the charts and graphs.\n",
     "  Just functions that return strings.\n",
     "  Leave Twitter posting, statistical preprocessing,\n",
@@ -149,8 +154,48 @@
     "  to the user/other libraries.\n",
     "- Easy to use.\n",
     "- Just focused on the Twitter use case.\n",
-    "  Not a general solution to the ASCII-art data viz problem,\n",
-    "  which is never-ending.\n"
+    "  Not a general solution to the grand ASCII-art Data Viz Problem,\n",
+    "  which is never-ending.\n",
+    "  \n",
+    "#### And also\n",
+    "\n",
+    "The README is generated from this Jupyter notebook. Don't forget to re-export it to README.md if you make changes.\n",
+    "\n",
+    "#### TODO\n",
+    "\n",
+    "- Well, yeah, maybe I do want to do bold and italic fonts as a utility function. Also maybe some variables bound to generally useful Unicode characters (smileys, Harvey balls, etc)\n",
+    "\n",
+    "A list of plots I got somewhere that looked at a quick glance like they might be possible. Not to be interpreted as firm intentions:\n",
+    "\n",
+    "- horiz bar\n",
+    "- heatmap\n",
+    "- stacked bar\n",
+    "- boxplot\n",
+    "- column sparkline\n",
+    "- win/loss sparkline\n",
+    "- treemap\n",
+    "- matrix diagram\n",
+    "- pictorial fracrion\n",
+    "- horiz hist\n",
+    "- waffle\n",
+    "- funnel\n",
+    "- linear process diag\n",
+    "- grouped bar\n",
+    "- nested/layered proportional area\n",
+    "- pictorial unit\n",
+    "- dot plot\n",
+    "- pyramid diag\n",
+    "- dumbell plot\n",
+    "- bullet diag\n",
+    "- partition layer chart icicle diag\n",
+    "- stepped line graph\n",
+    "- scaled up number\n",
+    "- lollypop chart\n",
+    "- comparison chart\n",
+    "- kagi chart\n",
+    "- dot matix\n",
+    "- pictogram\n",
+    "- stem and leaf \n"
    ]
   },
   {
