Tables done sort of and documented sort of.

--- a/README.ipynb
+++ b/README.ipynb
@@ -84,7 +84,8 @@
     "\n",
     "In alphabetical order:\n",
     "\n",
-    " - Horizontal Dot Chart"
+    " - Horizontal Dot Charts\n",
+    " - Tables"
    ]
   },
   {
@@ -98,7 +99,7 @@
     "to teach small children about data.\n",
     "This is the horizontal version.\n",
     "\n",
-    "### Example\n",
+    "#### Example\n",
     "\n",
     "Note Labels are automatically converted to the Unicode manthimatical \"fullwidth\" characters, which do not play nicely with screen readers. Beware the righteous wrath of the screen reader user."
    ]
@@ -114,13 +115,13 @@
      "text": [
       "How many times I ate chocolate this week:\n",
       "\n",
-      "Ｍｏ:⚫⚫⚫\n",
-      "Ｔｕ:⚫⚫\n",
-      "Ｗｅ:⚫⚫⚫⚫\n",
-      "Ｔｈ:\n",
-      "Ｆｒ:⚫⚫\n",
-      "Ｓａ:⚫\n",
-      "Ｓｕ:⚫⚫⚫⚫\n"
+      "Ｍｏ|⚫⚫⚫\n",
+      "Ｔｕ|⚫⚫\n",
+      "Ｗｅ|⚫⚫⚫⚫\n",
+      "Ｔｈ|\n",
+      "Ｆｒ|⚫⚫\n",
+      "Ｓａ|⚫\n",
+      "Ｓｕ|⚫⚫⚫⚫\n"
      ]
     }
    ],
@@ -133,6 +134,59 @@
     "        [3, 2, 4, 0, 2, 1, 4], [\"Mo\", \"Tu\", \"We\", \"Th\", \"Fr\", \"Sa\", \"Su\"]\n",
     "    )\n",
     ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Table\n",
+    "\n",
+    "Very small tables can be done using the util.to_monospace trick. Little two-way contingency tables might be done, for example."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example\n",
+    "\n",
+    "Note that you can use strings or floats/ints and they will converted to strings automatically.\n",
+    "\n",
+    "Also note that an empty string will be interpreted as an empty cell.\n",
+    "\n",
+    "At the moment that's all there is. No fancy cell/row/column borders or anything else."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Handedness (L or R) vs. Sex (M or F) Contingency Table\n",
+      "　　　　Ｒ　　Ｌ　　Ｔｏｔ\n",
+      "Ｍ　　　４３　９　　５２　\n",
+      "Ｆ　　　４４　４　　４８　\n",
+      "Ｔｏｔ　８７　１３　１００\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import piltdown.table as tbl\n",
+    "\n",
+    "# Data cleverly cribed from the Wikipedia entry for \"Contingency Table.\"\n",
+    "print(\"Handedness (L or R) vs. Sex (M or F) Contingency Table\\n\" +\n",
+    "    tbl.table([[\"\", \"R\",\"L\",\"Tot\"],\n",
+    "               [\"M\",43,9,52],\n",
+    "               [\"F\",44,4,48],\n",
+    "               [\"Tot\",87,13,100]]\n",
+    "              )\n",
+    ")"
    ]
   },
   {
@@ -222,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
