Minor changes and, uh, black run.

--- a/README.ipynb
+++ b/README.ipynb
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
    "source": [
     "import piltdown.table as tbl\n",
     "\n",
-    "# Data cleverly cribed from the Wikipedia entry for \"Contingency Table.\"\n",
+    "# Data imaginatively cribed from the Wikipedia entry for \"Contingency Table.\"\n",
     "print(\"Handedness (L or R) vs. Sex (M or F) Contingency Table\\n\" +\n",
     "    tbl.table([[\"\", \"R\",\"L\",\"Tot\"],\n",
     "               [\"M\",43,9,52],\n",
