Getting existing things documented.

--- a/README.ipynb
+++ b/README.ipynb
@@ -67,7 +67,7 @@
     "\n",
     "    pip install .\n",
     "    \n",
-    "or the local equivalent (eg. pip3 install . )\n",
+    "or the local equivalent (eg. `pip3 install .` )\n",
     "\n",
     "Or at some point maybe I will make it installable from PyPi or whatever it is.\n",
     "\n",
@@ -85,7 +85,10 @@
     "In alphabetical order:\n",
     "\n",
     " - Horizontal Dot Charts\n",
-    " - Tables"
+    " - Scaled-Up Numbers\n",
+    " - Tables\n",
+    " - Tally Charts\n",
+    " - Win/Loss Sparklines"
    ]
   },
   {
@@ -106,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -128,12 +131,98 @@
    "source": [
     "import piltdown.hdot_chart as hdot\n",
     "\n",
+    "# Data completely made up and implausible.\n",
     "print(\n",
     "    \"How many times I ate chocolate this week:\\n\\n\"\n",
     "    + hdot.hdot_chart(\n",
-    "        [3, 2, 4, 0, 2, 1, 4], [\"Mo\", \"Tu\", \"We\", \"Th\", \"Fr\", \"Sa\", \"Su\"]\n",
+    "        [3, 2, 4, 0, 2, 1, 4],\n",
+    "        [\"Mo\", \"Tu\", \"We\", \"Th\", \"Fr\", \"Sa\", \"Su\"]\n",
     "    )\n",
-    ")\n"
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Scaled-Up Number\n",
+    "Just like Mom used to make."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example\n",
+    "\n",
+    "Se literals.py for the font definitions. By all means, send me a PR with a better version, or additional fonts.\n",
+    "\n",
+    "Would like to support all digits, the comma (,) the period (.) and the percent (%) sign at the least.\n",
+    "\n",
+    "Use `leading_pad` to adjust left-padding to center your number if you want, but remember that will take up `leading_pad` times number of lines in the font of your alloted 280 tweet characters. So in the case below, the pad alone takes up 50 characters, and the total for the number below is therefore 85 (the default font is 3x5 chars plus an extra column blank between each number). The default padding is 4."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "　　　　　　　　　　░░▟　▄▆▖\n",
+      "　　　　　　　　　　░▞█　▘░▛\n",
+      "　　　　　　　　　　▟▄█　░▞░\n",
+      "　　　　　　　　　　░░█　▐░░\n",
+      "　　　　　　　　　　░░█　█▄▟\n",
+      "\n",
+      "Meaning of life, the Universe, and everything.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import piltdown.scaled_up_number as sun\n",
+    "\n",
+    "# Can I get my nerd card punched now?\n",
+    "print(sun.scaled_up_number(\"42\", leading_pad=10) +\n",
+    "     \"\\nMeaning of life, the Universe, and everything.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example\n",
+    "\n",
+    "With this one, the number takes up 155 characters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "　░█░　░░░　▄▆▖　▟▀▙　▛▀▜　░░░　▛▀█　█░▞\n",
+      "　▞█░　░░░　▘░▛　░░█　▌░░　░░░　░░▛　░▐░\n",
+      "　░█░　░░░　░▞░　░█░　█▀▙　░░░　░▞░　░▞░\n",
+      "　░█░　░░░　▐░░　░░█　░░▐　░░░　▐░░　░▌░\n",
+      "　▗█▖　░▜░　█▄▟　▜▄▛　█▄▛　░▖░　█░░　▞░█\n",
+      "\n",
+      "Your Mom's age compared to mine, as a very precise percentage.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import piltdown.scaled_up_number as sun\n",
+    "\n",
+    "# Sorry.\n",
+    "print(sun.scaled_up_number(\"1,235.7%\", leading_pad=0) +\n",
+    "     \"\\nYour Mom's age compared to mine, as a very precise percentage.\")"
    ]
   },
   {
@@ -160,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -181,12 +270,106 @@
     "\n",
     "# Data imaginatively cribed from the Wikipedia entry for \"Contingency Table.\"\n",
     "print(\"Handedness (L or R) vs. Sex (M or F) Contingency Table\\n\" +\n",
-    "    tbl.table([[\"\", \"R\",\"L\",\"Tot\"],\n",
-    "               [\"M\",43,9,52],\n",
-    "               [\"F\",44,4,48],\n",
-    "               [\"Tot\",87,13,100]]\n",
+    "    tbl.table([[\"\",   \"R\", \"L\", \"Tot\"],\n",
+    "               [\"M\",   43,  9,   52],\n",
+    "               [\"F\",   44,  4,   48],\n",
+    "               [\"Tot\", 87,  13,  100]]\n",
     "              )\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tally Chart\n",
+    "\n",
+    "Another one they use to teach \"data literacy\" to kids, mostly, I think."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example\n",
+    "\n",
+    "Not super pretty, as the tally characters have slightly slanted lines. There might be a better way to do the onesie-twosie characters.\n",
+    "\n",
+    "Note that you want your labels to be all the same length. If that's not conventient, I recommend using A, B, C, etc. or something similar, and then including a key below your chart."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How Many Chocolate Bars My Family Ate This Week\n",
+      "\n",
+      "Ｍｏ：ᚎ　\n",
+      "Ｔｕ：ᚎ　ᚎ　𝍩\n",
+      "Ｗｅ：𝍫\n",
+      "Ｔｈ：\n",
+      "Ｆｒ：ᚎ　ᚎ　ᚎ　𝍫\n",
+      "Ｓａ：ᚎ　ᚎ　ᚎ　ᚎ　ᚎ　𝍩\n",
+      "Ｓｕ：ᚎ　ᚎ　ᚎ　𝍪\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import piltdown.tally as tally\n",
+    "\n",
+    "# Data completely made up. What kind of gluttons do you think we are?\n",
+    "print(\"How Many Chocolate Bars My Family Ate This Week\\n\\n\" +\n",
+    "     tally.tally({\"Mo\": 5, \"Tu\": 11, \"We\": 3, \"Th\": 0, \"Fr\": 18, \"Sa\": 26, \"Su\": 17})\n",
+    "     )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Win/Loss Sparkline\n",
+    "\n",
+    "Tastes as good as it sounds!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example\n",
+    "\n",
+    "Note that you are basically just plotting signum of whatever numbers you give. \n",
+    "\n",
+    "Also note that a zero plots as a thin line through the middle."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My sleep time for the last 7 days, greater than or less than 8 hours: ▀▄▄▀－▀ rounded to nearest half hour.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import piltdown.win_loss_sparkline as wl\n",
+    "\n",
+    "# Actual data from my Garmin watch doodad.\n",
+    "print(\"My sleep time for the last 7 days, greater than or less than 8 hours: \" +\n",
+    "     wl.win_loss_sparkline([2.3, -3, -0.1, 2, 0, 67]) +\n",
+    "     \" rounded to nearest half hour.\" \n",
+    "     )"
    ]
   },
   {
@@ -198,17 +381,17 @@
     "#### Project goals\n",
     "\n",
     "- Simple\n",
-    "- Really simple\n",
-    "- Simple enough to just write static documentation here\n",
-    "- Simple enough that the examples in the documentation here can be the test suite\n",
-    "- Don't try to do anything but create the charts and graphs.\n",
+    "- *Really simple*\n",
+    "- Simple enough to just write static documentation-by-examples here in the README\n",
+    "- Simple enough that the examples in the documentation here can serve as a test suite\n",
+    "- (Mostly) don't try to do anything but create the charts and graphs.\n",
     "  Just functions that return strings.\n",
     "  Leave Twitter posting, statistical preprocessing,\n",
     "  and mixing output with other strings (titles, general writing, etc.)\n",
     "  to the user/other libraries.\n",
     "- Easy to use.\n",
     "- Just focused on the Twitter use case.\n",
-    "  Not a general solution to the grand ASCII-art Data Viz Problem,\n",
+    "  Not a general solution to the *Grand ASCII-art Data Viz Problem*,\n",
     "  which is never-ending.\n",
     "  \n",
     "#### And also\n",
@@ -229,14 +412,14 @@
     "- win/loss sparkline\n",
     "- treemap\n",
     "- matrix diagram\n",
-    "- pictorial fracrion\n",
+    "- pictorial fraction\n",
     "- horiz hist\n",
     "- waffle\n",
     "- funnel\n",
     "- linear process diag\n",
     "- grouped bar\n",
     "- nested/layered proportional area\n",
-    "- pictorial unit\n",
+    "- pictorial unit -- basically allow custom characters for the dot plot, one per line\n",
     "- dot plot\n",
     "- pyramid diag\n",
     "- dumbell plot\n",
