Document dot chart.

--- a/README.ipynb
+++ b/README.ipynb
@@ -84,11 +84,103 @@
     "\n",
     "In alphabetical order:\n",
     "\n",
+    " - Dot Charts\n",
     " - Horizontal Dot Charts\n",
     " - Scaled-Up Numbers\n",
     " - Tables\n",
     " - Tally Charts\n",
     " - Win/Loss Sparklines"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dot Charts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example\n",
+    "\n",
+    "Note that the number of characters used is Width x max height, because it has to be padded with whitespace characters. The one below, for example, is 10 high, plus one more for the label, which means 11 times 7 = 77 characters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Episodes of Animaniacs My Son Watched This Week\n",
+      "\n",
+      "　　　　＊　　\n",
+      "　　　　＊　　\n",
+      "　　　　＊　＊\n",
+      "　　　　＊　＊\n",
+      "　　＊　＊　＊\n",
+      "　　＊　＊＊＊\n",
+      "＊　＊　＊＊＊\n",
+      "＊＊＊　＊＊＊\n",
+      "＊＊＊　＊＊＊\n",
+      "ＭＴＷＲＦＳＵ\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import piltdown.dot_chart as dc\n",
+    "\n",
+    "# Data seems about right.\n",
+    "print(\"Number of Episodes of Animaniacs My Son Watched This Week\\n\" +\n",
+    "      dc.dot_chart([3, 2, 5, 0, 9, 4, 7],\n",
+    "                  [\"M\", \"T\", \"W\", \"R\", \"F\", \"S\", \"U\"]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example\n",
+    "\n",
+    "You can also use literals.DEFAULT_LABELS for labels and then include a key --"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Who Knocked On My Door Today?\n",
+      "　＊　\n",
+      "＊＊　\n",
+      "＊＊　\n",
+      "＊＊＊\n",
+      "ＡＢＣ\n",
+      "\n",
+      "A = Jehova's Witnesses; B = Mormons; C = Avon Lady\n"
+     ]
+    }
+   ],
+   "source": [
+    "import piltdown.dot_chart as dc\n",
+    "import piltdown.literals as lit\n",
+    "\n",
+    "# Now I'm just being mean.\n",
+    "print(\"Who Knocked On My Door Today?\" +\n",
+    "      dc.dot_chart([3, 4, 1],\n",
+    "      lit.DEFAULT_LABELS) +\n",
+    "      \"\\nA = Jehova's Witnesses; B = Mormons; C = Avon Lady\"\n",
+    "     )"
    ]
   },
   {
@@ -195,7 +287,9 @@
    "source": [
     "#### Example\n",
     "\n",
-    "With this one, the number takes up 155 characters."
+    "With this one, the number takes up 155 characters.\n",
+    "\n",
+    "**NOTE** however, that on a cell phone I don't think you can count on lines of more than about 20 characters, so this would actually try to wrap, I believe. Maybe I should try it on Twitter and see."
    ]
   },
   {
@@ -293,7 +387,7 @@
    "source": [
     "#### Example\n",
     "\n",
-    "Not super pretty, as the tally characters have slightly slanted lines. There might be a better way to do the onesie-twosie characters.\n",
+    "Not super pretty, as the tally characters have slightly slanted lines. There might be a better way to do the onesie-twosie characters. Also, they don't seem to work in whatever font Github uses for this README.\n",
     "\n",
     "Note that you want your labels to be all the same length. If that's not conventient, I recommend using A, B, C, etc. or something similar, and then including a key below your chart."
    ]
