Cut lines util and starting TOC for README.

--- a/README.ipynb
+++ b/README.ipynb
@@ -12,10 +12,19 @@
     "\n",
     "**YE OLDE TABLE OF CONTENTS**\n",
     "\n",
-    "1. **Introduction** *Wherein is answered the question of what it is and what it's for*\n",
-    "3. **Installation** *Wherein is answered the question of how to make it go*\n",
-    "2. **Documentation by Examples** *Wherein is answered the question of how to use it*\n",
-    "4. **Hacking** *Wherein is -- oh, this is getting boring*\n",
+    "- [Introduction](#introduction) *Wherein is answered the question of what it is and what it's for*\n",
+    "    - [The Basic Idea](#the-basic-idea)\n",
+    "- [Installation](#installation) *Wherein is answered the question of how to get it*\n",
+    "- [Documentation by Examples]() *Wherein is answered the question of how to make it go go go!*\n",
+    "    - [Plots](#ye-olde-plots)\n",
+    "        - [Dot Charts](#dot-charts)\n",
+    "    - [Utilities](#utilities)\n",
+    "        - [cut_above()](#cut_above) -- Add a \"cut above this line\" line to the output\n",
+    "        - [cut_below()](#cut_below) -- Add a \"cut below this line\" line to the output\n",
+    "        - [to_monospace()](#to_monospace) -- Write text in Unicode fake monospace (used internally for labels too)\n",
+    "        - [with_cut_lines()](#with_cut_lines) -- Wrap output in cut_below() and cut_above()\n",
+    "- [Hacking](#hacking) *Wherein is -- oh, this is getting boring*\n",
+    "    - [Todo](#todo)\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -80,37 +89,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Documentation by Example, or Ye Olde Plots\n",
+    "## Documentation by Example\n",
     "\n",
-    "In alphabetical order:\n",
-    "\n",
-    " - Dot Charts\n",
-    " - Horizontal Dot Charts\n",
-    " - Scaled-Up Numbers\n",
-    " - Tables\n",
-    " - Tally Charts\n",
-    " - Win/Loss Sparklines"
+    "### Ye Olde Plots\n",
+    "In alphabetical order:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dot Charts"
+    "#### Dot Charts"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Example\n",
+    "##### Example\n",
     "\n",
     "Note that the number of characters used is Width x max height, because it has to be padded with whitespace characters. The one below, for example, is 10 high, plus one more for the label, which means 11 times 7 = 77 characters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -146,14 +149,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Example\n",
+    "##### Example\n",
     "\n",
     "You can also use literals.DEFAULT_LABELS for labels and then include a key --"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -187,21 +190,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Horizontal Dot Chart\n",
+    "#### Horizontal Dot Chart\n",
     "\n",
     "Not to be confused with a dot plot.\n",
     "This is the kind of thing they use on Khan Acadamy\n",
     "to teach small children about data.\n",
     "This is the horizontal version.\n",
     "\n",
-    "#### Example\n",
+    "##### Example\n",
     "\n",
     "Note Labels are automatically converted to the Unicode manthimatical \"fullwidth\" characters, which do not play nicely with screen readers. Beware the righteous wrath of the screen reader user."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Scaled-Up Number\n",
+    "#### Scaled-Up Number\n",
     "Just like Mom used to make."
    ]
   },
@@ -245,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Example\n",
+    "##### Example\n",
     "\n",
     "Se literals.py for the font definitions. By all means, send me a PR with a better version, or additional fonts.\n",
     "\n",
@@ -256,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Example\n",
+    "##### Example\n",
     "\n",
     "With this one, the number takes up 155 characters.\n",
     "\n",
@@ -294,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +326,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Table\n",
+    "#### Table\n",
     "\n",
     "Very small tables can be done using the util.to_monospace trick. Little two-way contingency tables might be done, for example."
    ]
@@ -332,7 +335,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Example\n",
+    "##### Example\n",
     "\n",
     "Note that you can use strings or floats/ints and they will converted to strings automatically.\n",
     "\n",
@@ -343,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +379,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tally Chart\n",
+    "#### Tally Chart\n",
     "\n",
     "Another one they use to teach \"data literacy\" to kids, mostly, I think."
    ]
@@ -385,7 +388,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Example\n",
+    "##### Example\n",
     "\n",
     "Not super pretty, as the tally characters have slightly slanted lines. There might be a better way to do the onesie-twosie characters. Also, they don't seem to work in whatever font Github uses for this README.\n",
     "\n",
@@ -394,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -403,13 +406,13 @@
      "text": [
       "How Many Chocolate Bars My Family Ate This Week\n",
       "\n",
-      "Ｍｏ：ᚎ　\n",
-      "Ｔｕ：ᚎ　ᚎ　𝍩\n",
-      "Ｗｅ：𝍫\n",
-      "Ｔｈ：\n",
-      "Ｆｒ：ᚎ　ᚎ　ᚎ　𝍫\n",
-      "Ｓａ：ᚎ　ᚎ　ᚎ　ᚎ　ᚎ　𝍩\n",
-      "Ｓｕ：ᚎ　ᚎ　ᚎ　𝍪\n",
+      "Ｍｏ￤ᚎ　\n",
+      "Ｔｕ￤ᚎ　ᚎ　𝍩\n",
+      "Ｗｅ￤𝍫\n",
+      "Ｔｈ￤\n",
+      "Ｆｒ￤ᚎ　ᚎ　ᚎ　𝍫\n",
+      "Ｓａ￤ᚎ　ᚎ　ᚎ　ᚎ　ᚎ　𝍩\n",
+      "Ｓｕ￤ᚎ　ᚎ　ᚎ　𝍪\n",
       "\n"
      ]
     }
@@ -427,7 +430,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Win/Loss Sparkline\n",
+    "#### Win/Loss Sparkline\n",
     "\n",
     "Tastes as good as it sounds!"
    ]
@@ -436,7 +439,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Example\n",
+    "##### Example\n",
     "\n",
     "Note that you are basically just plotting signum of whatever numbers you give. \n",
     "\n",
@@ -445,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -464,6 +467,15 @@
     "     wl.win_loss_sparkline([2.3, -3, -0.1, 2, 0, 67]) +\n",
     "     \" rounded to nearest half hour.\" \n",
     "     )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Utilities\n",
+    "\n",
+    "Various little helpers which you may variously find helpful."
    ]
   },
   {
@@ -495,6 +507,7 @@
     "#### TODO\n",
     "\n",
     "- Well, yeah, maybe I do want to do bold and italic fonts as a utility function. Also maybe some variables bound to generally useful Unicode characters (smileys, Harvey balls, etc)\n",
+    "- A simple `count_chars()` utility to verify the whole thing is <= 280 chars.\n",
     "\n",
     "A list of plots I got somewhere that looked at a quick glance like they might be possible. Not to be interpreted as firm intentions:\n",
     "\n",
@@ -502,7 +515,7 @@
     "- heatmap\n",
     "- stacked bar\n",
     "- boxplot\n",
-    "- column sparkline\n",
+    "- column sparkline -- Wll duh. The one that started it all.\n",
     "- win/loss sparkline\n",
     "- treemap\n",
     "- matrix diagram\n",
