util.with_char_count() and more TOC work.

--- a/README.ipynb
+++ b/README.ipynb
@@ -8,22 +8,28 @@
     "\n",
     "<img src=\"Piltdown_man.jpg\" width=\"100px\" align=\"right\" alt=\"Piltdown Man\"/>\n",
     "\n",
-    "*\"Making your mindless Twitter propaganda look more scientific since 2021!\"*\n",
+    "*\"Data visualiation for your tweets. Making your mindless propaganda look more scientific since 2021!\"*\n",
     "\n",
     "**YE OLDE TABLE OF CONTENTS**\n",
     "\n",
     "- [Introduction](#introduction) *Wherein is answered the question of what it is and what it's for*\n",
     "    - [The Basic Idea](#the-basic-idea)\n",
     "- [Installation](#installation) *Wherein is answered the question of how to get it*\n",
-    "- [Documentation by Examples]() *Wherein is answered the question of how to make it go go go!*\n",
+    "- [Documentation by Example](#documentation-by-example) *Wherein is answered the question of how to make it go go go!*\n",
     "    - [Plots](#ye-olde-plots)\n",
     "        - [Dot Charts](#dot-charts)\n",
+    "        - [Horizontal Dot Charts](#horizontal-dot-charts)\n",
+    "        - [Scaled-Up Numbers](#scaled-up-numbers)\n",
+    "        - [Tables](#tables)\n",
+    "        - [Tally Charts](#tally-charts)\n",
+    "        - [Win/Loss Sparklines](#win-loss-sparklines)\n",
     "    - [Utilities](#utilities)\n",
     "        - [cut_above()](#cut_above) -- Add a \"cut above this line\" line to the output\n",
     "        - [cut_below()](#cut_below) -- Add a \"cut below this line\" line to the output\n",
     "        - [to_monospace()](#to_monospace) -- Write text in Unicode fake monospace (used internally for labels too)\n",
     "        - [with_cut_lines()](#with_cut_lines) -- Wrap output in cut_below() and cut_above()\n",
     "- [Hacking](#hacking) *Wherein is -- oh, this is getting boring*\n",
+    "    - [Project Goals](#project-goals)\n",
     "    - [Todo](#todo)\n",
     "\n",
     "## Introduction\n",
@@ -156,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +176,7 @@
       "＊＊＊\n",
       "ＡＢＣ\n",
       "\n",
-      "A = Jehova's Witnesses; B = Mormons; C = Avon Lady\n"
+      "A = Jehovah's Witnesses; B = Mormons; C = Avon Lady\n"
      ]
     }
    ],
@@ -178,11 +184,11 @@
     "import piltdown.dot_chart as dc\n",
     "import piltdown.literals as lit\n",
     "\n",
-    "# Now I'm just being mean.\n",
+    "# Now I'm just being mean...\n",
     "print(\"Who Knocked On My Door Today?\" +\n",
     "      dc.dot_chart([3, 4, 1],\n",
     "      lit.DEFAULT_LABELS) +\n",
-    "      \"\\nA = Jehova's Witnesses; B = Mormons; C = Avon Lady\"\n",
+    "      \"\\nA = Jehovah's Witnesses; B = Mormons; C = Avon Lady\"\n",
     "     )"
    ]
   },
@@ -190,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Horizontal Dot Chart\n",
+    "#### Horizontal Dot Charts\n",
     "\n",
     "Not to be confused with a dot plot.\n",
     "This is the kind of thing they use on Khan Acadamy\n",
@@ -240,8 +246,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Scaled-Up Number\n",
-    "Just like Mom used to make."
+    "#### Scaled Up Numbers\n",
+    "\n",
+    "High tech."
    ]
   },
   {
@@ -326,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Table\n",
+    "#### Tables\n",
     "\n",
     "Very small tables can be done using the util.to_monospace trick. Little two-way contingency tables might be done, for example."
    ]
@@ -379,7 +386,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Tally Chart\n",
+    "#### Tally Charts\n",
     "\n",
     "Another one they use to teach \"data literacy\" to kids, mostly, I think."
    ]
@@ -430,7 +437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Win/Loss Sparkline\n",
+    "#### Win Loss Sparklines\n",
     "\n",
     "Tastes as good as it sounds!"
    ]
@@ -486,6 +493,8 @@
     "\n",
     "#### Project goals\n",
     "\n",
+    "(Other than the lulz)\n",
+    "\n",
     "- Simple\n",
     "- *Really simple*\n",
     "- Simple enough to just write static documentation-by-examples here in the README\n",
@@ -507,7 +516,7 @@
     "#### TODO\n",
     "\n",
     "- Well, yeah, maybe I do want to do bold and italic fonts as a utility function. Also maybe some variables bound to generally useful Unicode characters (smileys, Harvey balls, etc)\n",
-    "- A simple `count_chars()` utility to verify the whole thing is <= 280 chars.\n",
+    "- A simple `count_chars()` utility to verify the whole thing is ≤ 280 chars.\n",
     "\n",
     "A list of plots I got somewhere that looked at a quick glance like they might be possible. Not to be interpreted as firm intentions:\n",
     "\n",
@@ -526,7 +535,7 @@
     "- linear process diag\n",
     "- grouped bar\n",
     "- nested/layered proportional area\n",
-    "- pictorial unit -- basically allow custom characters for the dot plot, one per line\n",
+    "- pictorial unit -- basically allow custom characters for the dot chart, one per line\n",
     "- dot plot\n",
     "- pyramid diag\n",
     "- dumbell plot\n",
