Column sparkline sort of minimally working.

--- a/README.ipynb
+++ b/README.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "<img src=\"Piltdown_man.jpg\" width=\"100px\" align=\"right\" alt=\"Piltdown Man\"/>\n",
     "\n",
-    "*\"Data visualiation for your tweets. Making your mindless propaganda look more scientific since 2021!\"*\n",
+    "*\"Data visualiation for your tweets... making your mindless propaganda look more scientific since 2021!\"*\n",
     "\n",
     "**YE OLDE TABLE OF CONTENTS**\n",
     "\n",
@@ -27,6 +27,7 @@
     "        - [cut_above()](#cut_above) -- Add a \"cut above this line\" line to the output\n",
     "        - [cut_below()](#cut_below) -- Add a \"cut below this line\" line to the output\n",
     "        - [to_monospace()](#to_monospace) -- Write text in Unicode fake monospace (used internally for labels too)\n",
+    "        - [with_char_count()](#with_char_count) -- Return failure message if a string is > 280 characters long\n",
     "        - [with_cut_lines()](#with_cut_lines) -- Wrap output in cut_below() and cut_above()\n",
     "- [Hacking](#hacking) *Wherein is -- oh, this is getting boring*\n",
     "    - [Project Goals](#project-goals)\n",
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -489,6 +490,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### to_monospace\n",
+    "\n",
+    "Convert text to monospace using then Unicode \"fullwidth\" characters. Yet again I mention that this does not play well with screen readers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ｗｉｔｔｙ　ｅｘａｍｐｌｅ　ｔｅｘｔ．\n"
+     ]
+    }
+   ],
+   "source": [
+    "import piltdown.util as util\n",
+    "\n",
+    "print(util.to_monospace(\"Witty example text.\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### with_char_count\n",
+    "\n",
+    "Use to wrap output. It will return a failure message if your string is longer than 280 characters.\n",
+    "\n",
+    "**OBVIOUS NOTE** If you're going to use `with_cut_lines` or similar with this, put the call to that *outside* of the call to `with_char_count`, or else you'll end up counting the cut lines."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is short enough to be a tweet!\n",
+      "String too long to post on Twitter\n"
+     ]
+    }
+   ],
+   "source": [
+    "import piltdown.util as util\n",
+    "\n",
+    "print(util.with_char_count(\"This is short enough to be a tweet!\"))\n",
+    "\n",
+    "print(util.with_char_count(\"x\" * 281))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Hacking\n",
     "\n",
     "#### Project goals\n",
@@ -524,8 +600,7 @@
     "- heatmap\n",
     "- stacked bar\n",
     "- boxplot\n",
-    "- column sparkline -- Wll duh. The one that started it all.\n",
-    "- win/loss sparkline\n",
+    "- column sparkline -- Well duh. The one that started it all.\n",
     "- treemap\n",
     "- matrix diagram\n",
     "- pictorial fraction\n",
